bindings/rust/wasmedge-sys/docs/wasmedge.rs

#[test]
fn bindgen_test_layout_WasmEdge_Result() {
    assert_eq!(
        ::std::mem::size_of::<WasmEdge_Result>(),
        1usize,
        concat!("Size of: ", stringify!(WasmEdge_Result))
    );
    assert_eq!(
        ::std::mem::align_of::<WasmEdge_Result>(),
        1usize,
        concat!("Alignment of ", stringify!(WasmEdge_Result))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WasmEdge_Result>())).Code as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(WasmEdge_Result),
            "::",
            stringify!(Code)
        )
    );
}
#[doc = " Struct of WASM limit."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_Limit {
    #[doc = " Boolean to describe has max value or not."]
    pub HasMax: bool,
    #[doc = " Minimum value."]
    pub Min: u32,
    #[doc = " Maximum value. Will be ignored if the `HasMax` is false."]
    pub Max: u32,
}
#[test]
fn bindgen_test_layout_WasmEdge_Limit() {
    assert_eq!(
        ::std::mem::size_of::<WasmEdge_Limit>(),
        12usize,
        concat!("Size of: ", stringify!(WasmEdge_Limit))
    );
    assert_eq!(
        ::std::mem::align_of::<WasmEdge_Limit>(),
        4usize,
        concat!("Alignment of ", stringify!(WasmEdge_Limit))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WasmEdge_Limit>())).HasMax as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(WasmEdge_Limit),
            "::",
            stringify!(HasMax)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WasmEdge_Limit>())).Min as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(WasmEdge_Limit),
            "::",
            stringify!(Min)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WasmEdge_Limit>())).Max as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(WasmEdge_Limit),
            "::",
            stringify!(Max)
        )
    );
}
pub const WasmEdge_Proposal_BulkMemoryOperations: WasmEdge_Proposal = 0;
pub const WasmEdge_Proposal_ReferenceTypes: WasmEdge_Proposal = 1;
pub const WasmEdge_Proposal_SIMD: WasmEdge_Proposal = 2;
pub const WasmEdge_Proposal_TailCall: WasmEdge_Proposal = 3;
pub const WasmEdge_Proposal_Annotations: WasmEdge_Proposal = 4;
pub const WasmEdge_Proposal_Memory64: WasmEdge_Proposal = 5;
pub const WasmEdge_Proposal_Threads: WasmEdge_Proposal = 6;
pub const WasmEdge_Proposal_ExceptionHandling: WasmEdge_Proposal = 7;
pub const WasmEdge_Proposal_FunctionReferences: WasmEdge_Proposal = 8;
#[doc = " WASM Proposal enumeration."]
#[doc = " This enum is copied from \"include/common/configure.h\" and should be the"]
#[doc = " same."]
pub type WasmEdge_Proposal = ::std::os::raw::c_uint;
pub const WasmEdge_HostRegistration_Wasi: WasmEdge_HostRegistration = 0;
pub const WasmEdge_HostRegistration_WasmEdge_Process: WasmEdge_HostRegistration = 1;
#[doc = " Host Module Registration enumeration."]
pub type WasmEdge_HostRegistration = ::std::os::raw::c_uint;
#[doc = " Disable as many optimizations as possible."]
pub const WasmEdge_CompilerOptimizationLevel_O0: WasmEdge_CompilerOptimizationLevel = 0;
#[doc = " Optimize quickly without destroying debuggability."]
pub const WasmEdge_CompilerOptimizationLevel_O1: WasmEdge_CompilerOptimizationLevel = 1;
#[doc = " Optimize for fast execution as much as possible without triggering"]
#[doc = " significant incremental compile time or code size growth."]
pub const WasmEdge_CompilerOptimizationLevel_O2: WasmEdge_CompilerOptimizationLevel = 2;
#[doc = " Optimize for fast execution as much as possible."]
pub const WasmEdge_CompilerOptimizationLevel_O3: WasmEdge_CompilerOptimizationLevel = 3;
#[doc = " Optimize for small code size as much as possible without triggering"]
#[doc = " significant incremental compile time or execution time slowdowns."]
pub const WasmEdge_CompilerOptimizationLevel_Os: WasmEdge_CompilerOptimizationLevel = 4;
#[doc = " Optimize for small code size as much as possible."]
pub const WasmEdge_CompilerOptimizationLevel_Oz: WasmEdge_CompilerOptimizationLevel = 5;
#[doc = " AOT compiler optimization level enumeration."]
pub type WasmEdge_CompilerOptimizationLevel = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_ConfigureContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_StatisticsContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_ASTModuleContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_CompilerContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_LoaderContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_ValidatorContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_InterpreterContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_StoreContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_FunctionTypeContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_FunctionInstanceContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_HostFunctionContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_TableInstanceContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_MemoryInstanceContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_GlobalInstanceContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_ImportObjectContext {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_VMContext {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " Get the version string of the WasmEdge C API."]
    #[doc = ""]
    #[doc = " The returned string must __NOT__ be freed."]
    #[doc = ""]
    #[doc = " \\returns NULL-terminated C string of version."]
    pub fn WasmEdge_VersionGet() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Get the major version value of the WasmEdge C API."]
    #[doc = ""]
    #[doc = " \\returns Value of the major version."]
    pub fn WasmEdge_VersionGetMajor() -> u32;
}
extern "C" {
    #[doc = " Get the minor version value of the WasmEdge C API."]
    #[doc = ""]
    #[doc = " \\returns Value of the minor version."]
    pub fn WasmEdge_VersionGetMinor() -> u32;
}
extern "C" {
    #[doc = " Get the patch version value of the WasmEdge C API."]
    #[doc = ""]
    #[doc = " \\returns Value of the patch version."]
    pub fn WasmEdge_VersionGetPatch() -> u32;
}
extern "C" {
    #[doc = " Set the logging system to filter to error level."]
    pub fn WasmEdge_LogSetErrorLevel();
}
extern "C" {
    #[doc = " Set the logging system to filter to debug level."]
    pub fn WasmEdge_LogSetDebugLevel();
}
extern "C" {
    #[doc = " Generate the I32 WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the I32 value."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Value struct with the I32 value."]
    pub fn WasmEdge_ValueGenI32(Val: i32) -> WasmEdge_Value;
}
extern "C" {
    #[doc = " Generate the I64 WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the I64 value."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Value struct with the I64 value."]
    pub fn WasmEdge_ValueGenI64(Val: i64) -> WasmEdge_Value;
}
extern "C" {
    #[doc = " Generate the F32 WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the F32 value."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Value struct with the F32 value."]
    pub fn WasmEdge_ValueGenF32(Val: f32) -> WasmEdge_Value;
}
extern "C" {
    #[doc = " Generate the F64 WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the F64 value."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Value struct with the F64 value."]
    pub fn WasmEdge_ValueGenF64(Val: f64) -> WasmEdge_Value;
}
extern "C" {
    #[doc = " Generate the V128 WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the V128 value."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Value struct with the V128 value."]
    pub fn WasmEdge_ValueGenV128(Val: i128) -> WasmEdge_Value;
}
extern "C" {
    #[doc = " Generate the NULL reference WASM value."]
    #[doc = ""]
    #[doc = " The values generated by this function are only meaningful when the"]
    #[doc = " `WasmEdge_Proposal_BulkMemoryOperations` or the"]
    #[doc = " `WasmEdge_Proposal_ReferenceTypes` turns on in configuration."]
    #[doc = ""]
    #[doc = " \\param T the reference type."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Value struct with the NULL reference."]
    pub fn WasmEdge_ValueGenNullRef(T: WasmEdge_RefType) -> WasmEdge_Value;
}
extern "C" {
    #[doc = " Generate the function reference WASM value."]
    #[doc = ""]
    #[doc = " The values generated by this function are only meaningful when the"]
    #[doc = " `WasmEdge_Proposal_BulkMemoryOperations` or the"]
    #[doc = " `WasmEdge_Proposal_ReferenceTypes` turns on in configuration."]
    #[doc = ""]
    #[doc = " \\param Index the function index."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Value struct with the function reference."]
    pub fn WasmEdge_ValueGenFuncRef(Index: u32) -> WasmEdge_Value;
}
extern "C" {
    #[doc = " Generate the function reference WASM value."]
    #[doc = ""]
    #[doc = " The values generated by this function are only meaningful when the"]
    #[doc = " `WasmEdge_Proposal_ReferenceTypes` turns on in configuration."]
    #[doc = ""]
    #[doc = " \\param Ref the reference to the external object."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Value struct with the external reference."]
    pub fn WasmEdge_ValueGenExternRef(Ref: *mut ::std::os::raw::c_void) -> WasmEdge_Value;
}
extern "C" {
    #[doc = " Retrieve the I32 value from the WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the WasmEdge_Value struct."]
    #[doc = ""]
    #[doc = " \\returns I32 value in the input struct."]
    pub fn WasmEdge_ValueGetI32(Val: WasmEdge_Value) -> i32;
}
extern "C" {
    #[doc = " Retrieve the I64 value from the WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the WasmEdge_Value struct."]
    #[doc = ""]
    #[doc = " \\returns I64 value in the input struct."]
    pub fn WasmEdge_ValueGetI64(Val: WasmEdge_Value) -> i64;
}
extern "C" {
    #[doc = " Retrieve the F32 value from the WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the WasmEdge_Value struct."]
    #[doc = ""]
    #[doc = " \\returns F32 value in the input struct."]
    pub fn WasmEdge_ValueGetF32(Val: WasmEdge_Value) -> f32;
}
extern "C" {
    #[doc = " Retrieve the F64 value from the WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the WasmEdge_Value struct."]
    #[doc = ""]
    #[doc = " \\returns F64 value in the input struct."]
    pub fn WasmEdge_ValueGetF64(Val: WasmEdge_Value) -> f64;
}
extern "C" {
    #[doc = " Retrieve the V128 value from the WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the WasmEdge_Value struct."]
    #[doc = ""]
    #[doc = " \\returns V128 value in the input struct."]
    pub fn WasmEdge_ValueGetV128(Val: WasmEdge_Value) -> i128;
}
extern "C" {
    #[doc = " Specify the WASM value is a null reference or not."]
    #[doc = ""]
    #[doc = " \\param Val the WasmEdge_Value struct."]
    #[doc = ""]
    #[doc = " \\returns true if the value is a null reference, false if not."]
    pub fn WasmEdge_ValueIsNullRef(Val: WasmEdge_Value) -> bool;
}
